Fix font sizes to display better on mobile

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif !default;
 $font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif !default;
-$font-size: 1.75em !default;
+$font-size: 1.25em !default;
 
 // Padding
 $padding-large: 20% !default;
