--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -61,7 +61,7 @@ header {
 .custom-about {
   width: auto;
   text-align: center;
-  font-size: 125%;
+  font-size: 175%;
 }
 .img-circle {
     border-radius: 50%;
